# tell-a-secret

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  Secrets.toml.example
project/: Cargo.toml
project/src/: config.rs  main.rs
project/src/common/: spam.rs
project/src/discord/: mod.rs
src/: config.rs  main.rs
src/common/: spam.rs
src/discord/: mod.rs
