[package]
name = "tell_a_secret"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
log = "0.4.17"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
env_logger = "0.10.0"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
